<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>example</groupId>
  <artifactId>findmatch</artifactId>
  <packaging>jar</packaging>
  <version>0.4.0-SNAPSHOT</version>
  <name>app</name>
  <url>http://maven.apache.org</url>
  <developers>
    <developer>
      <name>Serguei Kouzmine</name>
      <email>kouzmine_serguei@yahoo.com</email>
      <organization/>
      <organizationUrl>https://github.com/sergueik</organizationUrl>
    </developer>
  </developers>
  <properties>
    <encoding>UTF-8</encoding>
    <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
    <commons-exec.version>1.3</commons-exec.version>
    <commons-io.version>2.7</commons-io.version>
    <commons-lang3.version>3.0.1</commons-lang3.version>
    <hamcrest-all.version>1.3</hamcrest-all.version>
    <hamcrest-date.version>2.0.4</hamcrest-date.version>
    <htmlunit.version>2.37.0</htmlunit.version>
    <java.version>11</java.version>
    <json.version>20231013</json.version>
    <jackson.version>2.13.1</jackson.version>
    <jackson-databind.version>${jackson.version}</jackson-databind.version>
    <json-path.version>2.9.0</json-path.version>
    <jsoup.version>1.15.3</jsoup.version>
    <junit.version>5.12.1</junit.version>
    <junit-platform.version>1.12.1</junit-platform.version>
    <log4j.version>2.17.1</log4j.version>
    <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <minimal-json.version>0.9.5</minimal-json.version>
    <snakeyaml.version>1.32</snakeyaml.version>
    <gson.version>2.8.9</gson.version>
    <guava.version>23.1</guava.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>com.jayway.jsonpath</groupId>
      <artifactId>json-path</artifactId>
      <scope>test</scope>
      <version>${json-path.version}</version>
    </dependency>
    <dependency>
      <groupId>com.eclipsesource.minimal-json</groupId>
      <artifactId>minimal-json</artifactId>
      <version>${minimal-json.version}</version>
    </dependency>
    <dependency>
      <groupId>org.exparity</groupId>
      <artifactId>hamcrest-date</artifactId>
      <version>${hamcrest-date.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-all</artifactId>
      <version>${hamcrest-all.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson-databind.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>${jsoup.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <exclusions>
        <exclusion>
          <!-- exclude side by side versions of guava jar from gson -->
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <!-- NOTE: OK for YAML data serialization through jackson; commons-lang would not be OK -->
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-exec</artifactId>
      <version>${commons-exec.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <version>${junit-platform.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${json.version}</version>
    </dependency>
    <dependency>
      <groupId>org.yaml</groupId>
      <artifactId>snakeyaml</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>
  </dependencies>
  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <goals>
          <goal>compile</goal>
        </goals>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${encoding}</encoding>
          <!-- On windows one needs to update console code page outside of maven
to work with cyrillic pages:
chcp 65001
set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
rem ${encoding}
 -->
          <compilerArgument>-Xlint:all</compilerArgument>
          <compilerArgument>-Xlint:-processing</compilerArgument>
          <!-- NOTE: some compiler optimizatino flags not recognized on JDK 1.8.0.101 and were added in later builds e.g. 1.8.0.151:  
                  Fatal error compiling: 
                  invalid flag: -XX:+AggressiveUnboxing
                  invalid flag: -XX:+AggressiveOpts
                  invalid flag: -XX:+UnlockExperimentalVMOptions
                  -->
          <!--
          <compilerArgument>-XX:+UnlockExperimentalVMOptions</compilerArgument>
          <compilerArgument>-XX:+AggressiveOpts</compilerArgument>
	  <compilerArgument>-XX:+AggressiveUnboxing</compilerArgument>
	  -->
          <!--
   <compilerArgument>-Dfile.encoding=${encoding}</compilerArgument>
Fatal error compiling: invalid flag: -Dfile.encoding=UTF-8 -> [Help 1]
-->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <includes>
            <include>**/*Test.java</include>
          </includes>
          <useModulePath>false</useModulePath>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <version>${maven-resources-plugin.version}</version>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>${encoding}</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>maven-central</id>
      <name>maven central repo</name>
      <url>https://mvnrepository.com/repos/central</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <name>osgeo repo</name>
      <url>https://download.osgeo.org/webdav/geotools/</url>
    </repository>
    <repository>
      <id>seasar</id>
      <name>seasar repo</name>
      <url>https://www.seasar.org/maven/maven2</url>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
    <repository>
      <id>swt-repo</id>
      <url>https://swt-repo.googlecode.com/svn/repo/</url>
    </repository>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>consol</id>
      <url>https://labs.consol.de/maven/repository/</url>
    </repository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>
</project>
